@@ -1,0 +1,41 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:aop="http://www.springframework.org/schema/aop"
+	xmlns:tx="http://www.springframework.org/schema/tx" xmlns:p="http://www.springframework.org/schema/p"
+	xsi:schemaLocation="
+		http://www.springframework.org/schema/beans 
+		http://www.springframework.org/schema/beans/spring-beans-3.0.xsd
+		http://www.springframework.org/schema/aop
+		http://www.springframework.org/schema/aop/spring-aop-3.0.xsd
+		http://www.springframework.org/schema/tx
+		http://www.springframework.org/schema/tx/spring-tx-3.0.xsd">
+	
+	<!-- Application  Data Sources -->
+	<bean id="secDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
+		<property name="resourceRef" value="true" />
+		<property name="jndiName" value="jdbc/PFFSEC" />
+		<property name="lookupOnStartup" value="true" />
+	</bean>
+	<bean id="dataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
+		<property name="resourceRef" value="true" />
+		<property name="jndiName" value="jdbc/PFF" />
+		<property name="lookupOnStartup" value="true" />
+	</bean>
+	<bean id="auditDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
+		<property name="resourceRef" value="true" />
+		<property name="jndiName" value="jdbc/PFFAUDIT" />
+		<property name="lookupOnStartup" value="true" />
+	</bean>
+	<bean id="extDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
+		<property name="resourceRef" value="true" />
+		<property name="jndiName" value="jdbc/PFFEXT" />
+		<property name="lookupOnStartup" value="true" />
+	</bean>
+	
+	<!-- This data source should be in customization layer -->
+	<bean id="finOneDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
+      <property name="resourceRef" value="true" />
+      <property name="jndiName" value="jdbc/FINONE" />
+      <property name="lookupOnStartup" value="true" />
+	</bean>
+</beans>
