@@ -1,0 +1,68 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:aop="http://www.springframework.org/schema/aop"
+	xmlns:tx="http://www.springframework.org/schema/tx" xmlns:p="http://www.springframework.org/schema/p"
+	xsi:schemaLocation="
+		http://www.springframework.org/schema/beans 
+		http://www.springframework.org/schema/beans/spring-beans-3.0.xsd
+		http://www.springframework.org/schema/aop
+		http://www.springframework.org/schema/aop/spring-aop-3.0.xsd
+		http://www.springframework.org/schema/tx
+		http://www.springframework.org/schema/tx/spring-tx-3.0.xsd">
+	
+	<import resource="pennapps-datasources.xml"/>	
+	<!-- Application Transaction Managers -->
+	<bean id="secTransactionManager"
+		class="org.springframework.jdbc.datasource.DataSourceTransactionManager">
+		<property name="dataSource" ref="secDataSource" />
+	</bean>
+	<bean id="transactionManager"
+		class="org.springframework.jdbc.datasource.DataSourceTransactionManager">
+		<property name="dataSource" ref="dataSource" />
+	</bean>
+	<bean id="auditTransactionManager"
+		class="org.springframework.jdbc.datasource.DataSourceTransactionManager">
+		<property name="dataSource" ref="auditDataSource" />
+	</bean>
+	<bean id="extTransactionManager"
+		class="org.springframework.jdbc.datasource.DataSourceTransactionManager">
+		<property name="dataSource" ref="extDataSource" />
+	</bean>
+	
+	<tx:advice id="secServiceTxAdvice" transaction-manager="secTransactionManager">
+		<tx:attributes>
+			<tx:method name="*" propagation="REQUIRED" />
+		</tx:attributes>
+	</tx:advice>
+	<tx:advice id="serviceTxAdvice" transaction-manager="transactionManager">
+		<tx:attributes>
+			<tx:method name="*" propagation="REQUIRED" />
+		</tx:attributes>
+	</tx:advice>
+	<tx:advice id="auditServiceTxAdvice" transaction-manager="auditTransactionManager">
+		<tx:attributes>
+			<tx:method name="*" propagation="REQUIRED" />
+		</tx:attributes>
+	</tx:advice>
+	<tx:advice id="extServiceTxAdvice" transaction-manager="extTransactionManager">
+		<tx:attributes>
+			<tx:method name="*" propagation="REQUIRED" />
+		</tx:attributes>
+	</tx:advice>
+	
+	<aop:config>
+		<aop:pointcut id="guiServiceMethods" expression="execution(* com.pennant.gui.service.*.*(..))" />
+		<aop:pointcut id="serviceMethods" expression="execution(* com.pennant.backend.service.*.*(..))" />
+		<aop:pointcut id="daoMethods" expression="execution(* com.pennant.backend.dao.*.*(..))" />
+
+		<aop:advisor advice-ref="secServiceTxAdvice" pointcut-ref="guiServiceMethods" />
+		<aop:advisor advice-ref="secServiceTxAdvice" pointcut-ref="serviceMethods" />
+		<aop:advisor advice-ref="serviceTxAdvice" pointcut-ref="guiServiceMethods" />
+		<aop:advisor advice-ref="serviceTxAdvice" pointcut-ref="serviceMethods" />
+		<aop:advisor advice-ref="auditServiceTxAdvice" pointcut-ref="guiServiceMethods" />
+		<aop:advisor advice-ref="auditServiceTxAdvice" pointcut-ref="serviceMethods" />
+		<aop:advisor advice-ref="extServiceTxAdvice" pointcut-ref="guiServiceMethods" />
+		<aop:advisor advice-ref="extServiceTxAdvice" pointcut-ref="serviceMethods" />	
+	</aop:config> 
+	
+</beans>
