@@ -6,34 +6,7 @@
 		http://www.springframework.org/schema/beans/spring-beans-3.0.xsd
 		http://www.springframework.org/schema/util
 		http://www.springframework.org/schema/util/spring-util-3.0.xsd">
-	<!-- BEAN FOR GENERATING THE DATA SOURCES -->
-	<bean id="secDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
-		<property name="resourceRef" value="true" />
-		<property name="jndiName" value="jdbc/PFFSEC" />
-		<property name="lookupOnStartup" value="true" />
-	</bean>
-	<bean id="dataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
-		<property name="resourceRef" value="true" />
-		<property name="jndiName" value="jdbc/PFF" />
-		<property name="lookupOnStartup" value="true" />
-	</bean>
-	<bean id="auditDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
-		<property name="resourceRef" value="true" />
-		<property name="jndiName" value="jdbc/PFFAUDIT" />
-		<property name="lookupOnStartup" value="true" />
-	</bean>
-	<bean id="extDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
-		<property name="resourceRef" value="true" />
-		<property name="jndiName" value="jdbc/PFFEXT" />
-		<property name="lookupOnStartup" value="true" />
-	</bean>
-
-	<bean id="finOneDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
-      <property name="resourceRef" value="true" />
-      <property name="jndiName" value="jdbc/FINONE" />
-      <property name="lookupOnStartup" value="true" />
-	</bean>
-
+	
 	<!-- BEAN FOR GENERATING THE PRIMARY KEYS -->
 	<bean id="nextidviewDAO" class="com.pennant.backend.dao.impl.NextIdViewSQLServerDaoImpl">
 		<property name="dataSource" ref="dataSource" />
