@@ -12,6 +12,7 @@
 		<param-value>
 			 	classpath:api-config-Context.xml, 
 			 	classpath:api-gateway-Config.xml,
+			 	classpath:pennapps-tx-managers.xml,
 			 	classpath:applicationContext-db.xml,
 				classpath:applicationContext-daos.xml,
  				classpath:applicationContext-core-interface.xml,
