@@ -1,3 +1,8 @@
+pff 4.7.14, 2018-03-18
+----------------------
+- Application datasources and transaction-managers are maintain in separate config files.
+- Refer the pennapps-dataources.xml and pennapps-tx.xml instead of re-configure the beans.  
+
 pff 4.7.14, 2018-03-13
 ---------------------
 - Upgraded pennapps-web version from 0.6 to 0.6.1, to resolve the "Server is temporarily out of service" issue.
